graphql-parser/tests/snapshots/tests__query_var_defaults__parse_query__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Operation(
                OperationDefinition {
                    position: Pos(1:1),
                    kind: Query,
                    description: None,
                    name: Some(
                        "Foo",
                    ),
                    variable_definitions: [
                        VariableDefinition {
                            position: Pos(1:11),
                            name: "site",
                            var_type: NamedType(
                                "Site",
                            ),
                            default_value: Some(
                                Enum(
                                    "MOBILE",
                                ),
                            ),
                        },
                    ],
                    directives: [],
                    selection_set: SelectionSet {
                        span: (
                            Pos(1:33),
                            Pos(3:1),
                        ),
                        items: [
                            Field(
                                Field {
                                    position: Pos(2:3),
                                    alias: None,
                                    name: "field",
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        span: (
                                            Pos(2:3),
                                            Pos(2:3),
                                        ),
                                        items: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
